Mon Feb  2 09:55:12 GMT 2004 (njh)
----------------------------------
  * libclamav: Some instances of Worm.Dumaru.Y got through the net

Mon Feb  2 08:28:41 GMT 2004 (njh)
----------------------------------
  * contrib: added CLI to the Windows client to allow integration with
  	download managers, or scheduled scanning of an entire disc

Sun Feb  1 17:50:30 CET 2004 (tk)
---------------------------------
  * clamd: use putenv() instead of setenv() while setting TemporaryDirectory
	   (due to a compilation error on Solaris reported by Nigel)

Sun Feb  1 02:12:50 CET 2004 (tk)
---------------------------------
  * libclamav: + use strcasecmp() instead of strcmp() when comparing
		 "Return-path" (Nigel). It may cause compilation errors on
		 some systems so please report potential problems.
	       + small cleanup for Solaris (patch by Andy Igoshin <ai*vsu.ru>)
	       + readdb: free resources in critical error conditions: (patch by
	         Everton da Silva Marques <everton*lab.ipaccess.diveo.net.br>)
  * clamdscan: return 2 if clamd returns error messages (patch by Len Budney
	       <lbudney*pobox.com>
  * clamd: + new directives: TemporaryDirectory, LogClean (patch by Andrey
	     V. Malyshev" <amal*krasn.ru>)
	   + UseProcesses has been temporarily disabled (the code is broken and
	     must be updated for the new protocol)
  * sigtool: + fixed compilation error with Sun's compiler (reported by
	       Alex S Moore <asmoore*edge.net>)
	     + -l (short option for --list-sigs)
  * freshclam: reply to -h before parsing a config file (patch by Dustin Mollo
	       <dustin.mollo*sonoma.edu>)
  * configure: + check for __attribute__((packed)) (Trog) 
	       + use --disable-cr on OpenBSD 3.3 automatically (thanks to Nigel)

Fri Jan 30 12:45:10 GMT 2004 (njh)
----------------------------------
  * contrib:	   Recursive scan into folders by the Windows client is now
  		optional (File->Options). Default=TRUE

Thu Jan 29 12:54:08 GMT 2004 (njh)